        unnecesary onfocus trigger, issue #1074.
  * Add upstream Rev. 2932:
    - agi/agi-VDAD_ALL_inbound.agi,
      bin/ADMIN_keepalive_ALL.pl: Added more teodDB logging.
    - bin/AST_VDauto_dial.pl: Small changes for Inbound Queue No Dial.
  * Add upstream Rev. 2933:
    - bin/AST_VDhopper.pl: Fix to allow for commented(#) lines in filters.

  [Frank Gorgas-Waller]
  * Add Agent Prefix (2018-004):
    - extras/mysql_update/mysql-1531.sql,
      www/agc/vicidial.php,
      extras/upgrade_2.14.sql,
      www/vicidial/help.php,
      www/vicidial/admin.php: Add Agent Prefix for calls to Agents with 
        AgentNo != PhoneNo..

2.25.24a
  [Jörg Fring-Fürst]
  * www/vicidial/admin.php: Correct typo.
  * Release 2.25.24a 2018-02-18.

2.25.24
  [Jörg Frings-Fürst]
  * Add upstream Rev. 2881:
    - MySQL_AST_CREATE_tables.sql,
      upgrade_2.14.sql,
      vdc_db_query.php,
      admin.php,
      UPGRADE,
      help.php: Added next_dial_my_callbacks campaign option.
  * New mysql-1530.sql.
  * Add upstream Rev. 2882:
    - admin.php,
      NON-AGENT_API.txt: Added call_status_stats function.
    - lead_report_export.php: Added vendor lead code filtering option.
  * Upstream Rev. 2882, 2883, 2284, 2885, 2886, 2887 and 2888 not added.
  * Add upstream Rev. 2889:
    - AST_VDhopper.pl,
      MySQL_AST_CREATE_tables.sql,
      upgrade_2.14.sql,
      admin.php,
      help.php,
      UPGRADE: Added anyone_callback_inactive_lists option.
  * Add upstream Rev. 2890:
    - AST_flush_DBqueue.pl,
      MySQL_AST_CREATE_tables.sql,
      upgrade_2.14.sql: Added flush for cid_channels_recent table.
  * Add upstream Rev. 2891:
    - lead_report_export.php: Correct SQL statement build.
  * Add download function (2018-001):
    - Add field tmp_download_dir to table system_settings.
    - admin.php: Add field.
    - help.php: Add tag downloaddir.
    - New download.php.
    - functions.php: New function GetTmpDownLoadDir().
    - install.pl: Add mkdir for directory download.